tests/parser/constant_err2.expected
Syntax Error: line 3:
Unexpected token (TOK_KEY_CONST, 'const'), likely missing a(n)  
  'TOK_KEY_BEGIN' or
  'TOK_ID' or
  'TOK_KEY_VAR' or
Possibly due to malformed or missing:
  Non-terminal: 'If Statement' or
  Non-terminal: 'While Statement' or
  Non-terminal: 'Write Statement' or
  Non-terminal: 'Read Statement' or
  Non-terminal: 'Case'
