tests/parser/constant_err2.mtp
(* constants *)
const test :=10;
const floop := 1337;
(*three := 'Stringify';*)

begin

end
.